--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        h1{
-            color: red;
-            font-size: 2rem;
-        }
-        h3{
-            color: blue;
-            font-size: 2rem;;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Aniket</h1>
