adding the classes in CSS

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Aniket</h1>
-    <h2 id="heading2">Aniket</h2>
-    <h3>Aniket</h3>
+    <h3 class="red">I'm red</h3>
+    <h3 class="blue">I'm blue</h3>
+    <h3 class="red">I'm red</h3>
+    <h3 class="blue">I'm blue</h3>
+    <h3 class="red">I'm red</h3>
+    <h3 class="blue">I'm blue</h3>
 </body>
 </html>
