--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h3 class="red">I'm red</h3>
+    <h3 id="redhigh" class="red">I'm red</h3>
     <h3 class="blue">I'm blue</h3>
     <h3 class="red">I'm red</h3>
     <h3 class="blue">I'm blue</h3>
     <h3 class="red">I'm red</h3>
-    <h3 class="blue">I'm blue</h3>
+    <h3 class="blue lowercase">I'm blue</h3>
 </body>
 </html>
