using the div and span tags

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h3 id="redhigh" class="red">I'm red</h3>
-    <h3 class="blue">I'm blue</h3>
-    <h3 class="red">I'm red</h3>
-    <h3 class="blue">I'm blue</h3>
-    <h3 class="red">I'm red</h3>
-    <h3 class="blue lowercase">I'm blue</h3>
+    <div>
+    <h3>About :- </h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam iusto optio ipsum, praesentium odit nisi rerum eveniet quisquam, iure ipsa adipisci nesciunt quae repellendus voluptates rem perferendis explicabo quasi quos!</p>
+    </div>
+    <h3>About more :-</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quae dolor necessitatibus, <span>i'm uppercase</span> magni numquam, consectetur assumenda blanditiis <span>i'm uppercase</span> officia quam facere fugiat sapiente id ab odio iste neque fugit similique nemo.</p>
 </body>
 </html>
