styling the text

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div>
+    <div class="lightcoral">
     <h3>About :- </h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam iusto optio ipsum, praesentium odit nisi rerum eveniet quisquam, iure ipsa adipisci nesciunt quae repellendus voluptates rem perferendis explicabo quasi quos!</p>
     </div>
+    <div class="red">
     <h3>About more :-</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quae dolor necessitatibus, <span>i'm uppercase</span> magni numquam, consectetur assumenda blanditiis <span>i'm uppercase</span> officia quam facere fugiat sapiente id ab odio iste neque fugit similique nemo.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quae dolor necessitatibus, <span class="lkj">i'm uppercase</span> magni numquam, consectetur assumenda blanditiis <strong><em><span class="devil">i'm uppercase</span></em></strong> officia quam facere fugiat sapiente id ab odio iste neque fugit similique nemo.</p>
+    </div>
 </body>
 </html>
