--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="lightcoral">
-    <h3>About :- </h3>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam iusto optio ipsum, praesentium odit nisi rerum eveniet quisquam, iure ipsa adipisci nesciunt quae repellendus voluptates rem perferendis explicabo quasi quos!</p>
-    </div>
-    <div class="red">
-    <h3>About more :-</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quae dolor necessitatibus, <span class="lkj">i'm uppercase</span> magni numquam, consectetur assumenda blanditiis <strong><em><span class="devil">i'm uppercase</span></em></strong> officia quam facere fugiat sapiente id ab odio iste neque fugit similique nemo.</p>
-    </div>
+   <p class="tha">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime molestiae ab expedita hic corrupti illo, eos accusamus eaque, animi distinctio delectus quaerat quod commodi veniam alias quisquam et dolores ipsam!</p>
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi consectetur, tempore itaque repellendus officia nemo nesciunt ipsum mollitia inventore dolores!</p>
 </body>
 </html>
