using the hex for colors

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <p class="tha">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime molestiae ab expedita hic corrupti illo, eos accusamus eaque, animi distinctio delectus quaerat quod commodi veniam alias quisquam et dolores ipsam!</p>
-   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi consectetur, tempore itaque repellendus officia nemo nesciunt ipsum mollitia inventore dolores!</p>
+   <h3 class="tha">I'm Iron Man</h3>
+   <h3>I'm Iron Man</h3>
 </body>
 </html>
