practice on the size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <h3 class="tha">I'm Iron Man</h3>
-   <h3>I'm Iron Man</h3>
+   <div class="parent">
+       <div class="child"></div>
+   </div>
 </body>
 </html>
