--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
    <div class="parent">
-       <div class="child"></div>
+       <div class="child1"></div>
+       <div class="child2"></div>
    </div>
 </body>
 </html>
