--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <div class="parent">
-       <div class="child1"></div>
-       <div class="child2"></div>
-   </div>
+   <p class="heading1">Heading</p>
+   <p class="heading2">Heading</p>
 </body>
 </html>
