learning vwidth and vheight

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <p class="heading1">Heading</p>
-   <p class="heading2">Heading</p>
+   <p class="heading1"></p>
+   <p class="heading2"></p>
 </body>
 </html>
