done with the cals function

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <p class="heading1"></p>
-   <p class="heading2"></p>
+    <div class="one">Heading</div>
+    <div class="two"></div>
 </body>
 </html>
