some practice on text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is Aniket</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus nesciunt quisquam accusamus reiciendis. Dolore fugit officia velit ex molestias voluptatibus!</p>
+    <a href="#">Google</a>
+    <h1>Main Heading</h1>
+    <p class="one">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure voluptatem commodi dolore cum doloremque numquam repellendus omnis eius modi architecto!</p>
+    <p class="two">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure voluptatem commodi dolore cum doloremque
+    numquam repellendus omnis eius modi architecto!</p>
+    <p class="three">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure voluptatem commodi dolore cum doloremque
+    numquam repellendus omnis eius modi architecto!</p>
 </body>
 </html>
