CSS box model practice

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="#">Google</a>
-    <h1>Main Heading</h1>
-    <p class="one">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure voluptatem commodi dolore cum doloremque numquam repellendus omnis eius modi architecto!</p>
-    <p class="two">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure voluptatem commodi dolore cum doloremque
-    numquam repellendus omnis eius modi architecto!</p>
-    <p class="three">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure voluptatem commodi dolore cum doloremque
-    numquam repellendus omnis eius modi architecto!</p>
+    <h1 class="one">Bh</h1>
+    <h1 class="two">ar</h1>
+    <h1 class="three">at</h1>
 </body>
 </html>
