the difference between border and outline

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="one">Bh</h1>
-    <h1 class="two">ar</h1>
-    <h1 class="three">at</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio nam ut exercitationem fugit.</p>
+    <div>
+        <a href="#" id="one">Border</a>
+        <a href="#" id="two">Outline</a>
+    </div>
 </body>
 </html>
