the difference between inline and block element

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <a href="#" id="one">Border</a>
-        <a href="#" id="two">Outline</a>
-    </div>
+    <p class="block">Block element</p>
+    <h1 class="block">Block element</h1>
+    <div class="block">Block element</div>
+    <span class="inline">Inline element</span>
+    <a href="#" class="inline">Inline element</a>
 </body>
 </html>
