--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="block">Block element</p>
-    <h1 class="block">Block element</h1>
-    <div class="block">Block element</div>
-    <span class="inline">Inline element</span>
-    <a href="#" class="inline">Inline element</a>
+    <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">product</a></li>
+        <li><a href="#">contact</a></li>
+    </ul>
 </body>
 </html>
