--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="#">about</a></li>
-        <li><a href="#">product</a></li>
-        <li><a href="#">contact</a></li>
-    </ul>
+        <a href="#">home</a>
+        <a href="#">about</a>
+        <a href="#">product</a>
+        <a href="#">contact</a>
 </body>
 </html>
