concept of box sizing

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-        <a href="#">home</a>
-        <a href="#">about</a>
-        <a href="#">product</a>
-        <a href="#">contact</a>
+    <div class="one">Border box</div>
+    <div class="two">Normal</div>
+    <div class="three">Without Border Box</div>
 </body>
 </html>
