the concept of opacity, visibility and none

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="one">Border box</div>
-    <div class="two">Normal</div>
-    <div class="three">Without Border Box</div>
+    <div class="none">none</div>
+    <div class="opacity-0">opacity-0</div>
+    <div class="opacity-1">opacity-1</div>
+    <div class="visibility">visibility</div>
+    <div class="opacity-5">opacity-5</div>
 </body>
 </html>
