image background practice

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="none">none</div>
-    <div class="opacity-0">opacity-0</div>
-    <div class="opacity-1">opacity-1</div>
-    <div class="visibility">visibility</div>
-    <div class="opacity-5">opacity-5</div>
+    <div class="big">big image</div>
+    <div class="small">small image</div>
+    <div class="folder">folder image</div>
 </body>
 </html>
