use of linear gradient in images

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="one"></div>
-    <div class="two"></div>
-    <div class="three"></div>
-    <div class="four"></div>
-    <div class="five"></div>
-    <div class="six"></div>
+<h1 class="one">One</h1>
+<h1 class="two">Two</h1>
 </body>
 </html>
