use of float and clear properties

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-<h1 class="one">One</h1>
-<h1 class="two">Two</h1>
-<div class="colorzilla"></div>
+    <div>
+        <img src="./small.jpg" class="one" alt="nature image">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores cupiditate aspernatur ipsam consectetur beatae facere consequuntur porro id et mollitia repellat iure consequatur, rem obcaecati, odio quis facilis adipisci nisi?</p>
+    </div>
 </body>
 </html>
