--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div>
-        <img src="./small.jpg" class="one" alt="nature image">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores cupiditate aspernatur ipsam consectetur beatae facere consequuntur porro id et mollitia repellat iure consequatur, rem obcaecati, odio quis facilis adipisci nisi?</p>
+    <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, voluptates.</p>
+    <p class="two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, voluptatibus.<span class="special">welcome to my world</span></p>
     </div>
 </body>
 </html>
