absolute position practice

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div>
-    <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, voluptates.</p>
-    <p class="two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, voluptatibus.<span class="special">welcome to my world</span></p>
+        <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit.             Deserunt, voluptates.</p>
+        <p class="two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, voluptatibus.<span class="special">welcome to my world</span>
+        </p>
     </div>
 </body>
 </html>
