--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div>
-        <h1>Welcome to My World</h1>
+        <img class="one" src="./small.jpg" alt="">
+        <img class="two" src="./big.jpeg" alt="">
+        <img class="three" src="./images/image.jpeg" alt="">
     </div>
 </body>
 </html>
