practice of pseudo elements

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <img class="one" src="./small.jpg" alt="">
-        <img class="two" src="./big.jpeg" alt="">
-        <img class="three" src="./images/image.jpeg" alt="">
-    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </body>
 </html>
