using images with pseudo elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <div>
+        <img src="./big.jpeg" alt="">
+    </div>
 </body>
 </html>
