the difference between child and descendant

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div>
-        <img src="./big.jpeg" alt="">
+        <h1 class="heading">Child and descendant</h1>
+    </div>
+    <div>
+        <ul>
+            <li>
+                <h1 class="heading">descendant only</h1>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
