some deatils about child and descendant

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div>
-        <h1 class="heading">Child and descendant</h1>
+        <h1>child and descendant</h1>
     </div>
     <div>
         <ul>
             <li>
-                <h1 class="heading">descendant only</h1>
+                <h1>descendant</h1>
             </li>
         </ul>
     </div>
