first letter and the first line pseudo elements

--- a/index.html
+++ b/index.html
@@ -8,15 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <h1>child and descendant</h1>
-    </div>
-    <div>
-        <ul>
-            <li>
-                <h1>descendant</h1>
-            </li>
-        </ul>
-    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sed harum, cupiditate iure odio nam?</p>
 </body>
 </html>
