interesting facts on links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sed harum, cupiditate iure odio nam?</p>
+    <a href="#top">normal link</a>
+    <a href="https://youtube.com">visited link</a>
+    <a href="#top">hover link</a>
+    <a href="http://start.spring.io">active link</a>
 </body>
 </html>
