use of variable inside the css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="one"></div>
-    <div class="two"></div>
+    <h1>Main heading</h1>
+    <div>
+        <h2>Second heading</h2>
+    </div>
 </body>
 </html>
