--- a/Flex-In-CSS.html
+++ b/Flex-In-CSS.html
@@ -18,6 +18,7 @@
     }
 </style>
 <body>
+    <!-- The flex container becomes flexible by setting the display property to flex: -->
     <div class="flex-container">
         <div>1</div>
         <div>2</div>
