--- a/Flex-In-CSS.html
+++ b/Flex-In-CSS.html
@@ -9,12 +9,14 @@
 <style>
     .flex-container{
         display: flex;
+        flex-direction: column;
         background-color: teal;
     }
     .flex-container>div{
         background: white;
         padding: 10px;
         margin: 20px;
+        width: 20px;
     }
 </style>
 <body>
